--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-cloudinary": "^4.24.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.10.4",
+    "stripe": "^14.12.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
